Made front closer to final look 2

--- a/client/src/TextBlock/TextBlock.css
+++ b/client/src/TextBlock/TextBlock.css
@@ -4,7 +4,7 @@
 
     width: 100%;
     min-width: 900px;
-    background-color: #f5d3a6;
+    background-color: rgba(233,194,122,0.79);
     height: 600px;
 
     display: flex;
