--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,3 +64,23 @@
     -webkit-filter:blur(10px);
   }
 }
+
+@media (max-width: 639px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 640px) {
+  h1 {
+    font-size: 55px;
+  }
+
+  p {
+    font-size: 30px;
+  }
+}
