--- a/client/src/InfoSection/InfoBlock/InfoBlock.css
+++ b/client/src/InfoSection/InfoBlock/InfoBlock.css
@@ -14,11 +14,21 @@
 
 .pStyle {
     position: relative;
-
     font-family: 'Karla', sans-serif;
-    font-size: 22px;
     font-weight: bold;
     color: #191921;
+}
+
+@media (max-width: 639px) {
+    .pStyle {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 640px) {
+    .pStyle {
+        font-size: 24px;
+    }
 }
 
 hr {
