--- a/client/src/TextBlock/TextBlock.css
+++ b/client/src/TextBlock/TextBlock.css
@@ -4,7 +4,7 @@
 
     width: 100%;
     min-width: 900px;
-    background-color: rgba(233,194,122,0.79);
+    background: url("../../public/texture-2136831.jpg");
     height: 600px;
 
     display: flex;
@@ -12,6 +12,7 @@
     align-items: center;
 
     text-align: center;
+    color: white;
 }
 
 h1 {
@@ -28,7 +29,7 @@ button {
     font-family: 'Orelega One';
     font-size: 26px;
     border-radius: 15px;
-    border-color: #f5d3a6;
+    border-color: darkorange;
     background-color: whitesmoke;
     box-shadow: 0 0 20px rgba(0, 0, 0, .2);
     height: 70px;
