Made basic static front part of the application.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,86 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.blured {
-  animation-duration: 1s;
-  animation-direction: normal;
-  animation-name: blurAnimation;
-  animation-fill-mode: forwards;
-  animation-play-state: running;
-}
-
-.unblured {
-  animation-duration: 1s;
-  animation-direction: reverse;
-  animation-name: blurAnimation;
-  animation-fill-mode: forwards;
-  animation-play-state: running;
-}
-
-@keyframes blurAnimation {
-  from {
-    filter:blur(0px);
-    -webkit-filter:blur(0px);
-  }
-
-  to {
-    filter:blur(10px);
-    -webkit-filter:blur(10px);
-  }
-}
-
-@media (max-width: 639px) {
-  h1 {
-    font-size: 30px;
-  }
-
-  p {
-    font-size: 20px;
-  }
-}
-
-@media (min-width: 640px) {
-  h1 {
-    font-size: 55px;
-  }
-
-  p {
-    font-size: 30px;
-  }
+.icon {
+    background: url("../public/icons/fairdeal.png") center;
+    background-size: cover;
+    border-radius: 2px;
 }
