--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -18,14 +18,17 @@
 }
 
 .avatar {
+    box-shadow: 0 0 4px rgba(154,154,154,0.82);
+
     position: relative;
     width: 80px;
     border-radius: 50px;
 }
 
 .textBlock {
-    background: rgba(255,165,0,0.62);
-    border-radius: 6px;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 0 0 4px rgba(154,154,154,0.82);
     padding: 8px;
 }
 
@@ -43,13 +46,15 @@
 
     font-family: "Orelega One";
     font-size: 20px;
+    font-weight: bold;
 
     border: none;
+    cursor: pointer;
 }
 
 @media (min-width: 740px) {
     .descriptionBlock {
-        height:100vh;
+        height:110vh;
         flex-direction: row;
     }
 
