--- a/client/src/pages/Contacts/Contacts.css
+++ b/client/src/pages/Contacts/Contacts.css
@@ -5,12 +5,22 @@
     background: white;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.contacts h1 {
+    font-family: "Orelega One";
+    font-size: 40px;
+    margin: 54px;
+}
+
 .itemsRow {
     width: 80%;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 0 0 4px rgba(154,154,154,0.82);
 
     display: flex;
     flex-direction: row;
@@ -27,6 +37,6 @@
 
 @media (min-width: 740px) {
     .itemsRow {
-        height: 300px;
+        height: 160px;
     }
 }
