--- a/client/src/pages/Account/Settings/Settings.css
+++ b/client/src/pages/Account/Settings/Settings.css
@@ -1,4 +1,4 @@
-.settingsBlock {
+.formBlock {
     position: relative;
     top: 10%;
     left: calc(50% - 40vw);
@@ -10,7 +10,7 @@
     font-family: "Orelega One";
 }
 
-.settingsRow {
+.formRow {
     position: relative;
 
     height: 100px;
@@ -21,32 +21,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: start;
-}
-
-.setting {
-    margin-left: 30px;
-
-    display: block;
-}
-
-.setting p {
-    font-size: 16px;
-}
-
-.formSendButton {
-    margin: 30px;
-
-    width: 140px;
-    height: 34px;
-
-    background-color: orange;
-
-    border-radius: 4px;
-    border: none;
-
-    box-shadow: 0 0 4px #ffa500;
-
-    font-size: 18px;
 }
 
 .formSendButton:hover {
